# clpe_ros_msgs-ros-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
msg/: ClpeCameraInfo.msg
